--- a/FixITPagliu/app/src/main/res/values/strings.xml
+++ b/FixITPagliu/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name"></string>
     <string name="confermapsw">Conferma Password</string>
-    <string name="confermareg">Completa registrazione</string>
+    <string name="confermareg">INVIA</string>
     <string name="email">e-Mail</string>
-    <string name="login">Login</string>
+    <string name="backToLogin">Torna alla schermata di login</string>
     <string name="registrazione">Registrazione</string>
     <string name="logout">LOGOUT</string>
     <string name="verify">Verify</string>
@@ -20,7 +20,7 @@
     <string name="login_impiegato">Login Impiegato</string>
     <string name="lavori_per_noi">Lavori per noi?</string>
     <string name="password_dimenticata">Password dimenticata ?</string>
-    <string name="login_utenti">Login utenti</string>
+    <string name="login">Login</string>
     <string name="codice_fiscale">Codice Fiscale</string>
     <string name="data_di_nascita">Data di nascita</string>
     <string name="territorio">Territorio</string>
@@ -72,7 +72,19 @@
     <string name="carica_segnalazioni">Carica Segnalazioni</string>
     <string name="others">Others</string>
     <string name="fix_it">FIX-IT</string>
-    <string name="employee_dashboard">Employee Dashboard</string>
     <string name="edit">Edit</string>
     <string name="apri_nsegnalazione">Apri\nSegnalazione</string>
+    <string name="undefined">Undefined</string>
+    <string name="carica_immagine_del_profilo">Carica immagine del profilo</string>
+    <string name="cognome">Cognome</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="usernameRegex">^[a-zA-Z0-9][a-zA-Z0-9_]{8,20}$</string>
+    <string name="fullnameRegex">^[a-zA-Z]+(([\\\'\\,\\.\\- ][a-zA-Z ])?[a-zA-Z]*)*$</string>
+    <string name="surnameRegex">^[a-zA-Z]+(([\\\'\\,\\.\\- ][a-zA-Z ])?[a-zA-Z]*)*$</string>
+    <string name="fiscalcodeRegex">^[A-Z]{6}[A-Z0-9]{2}[A-Z][A-Z0-9]{2}[A-Z][A-Z0-9]{3}[A-Z]$</string>
+    <string name="emailRegex"><![CDATA[^[a-zA-Z0-9.!#$%&\'*+/=?^_`{|}~-]+@[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?(?:\\.[a-zA-Z0-9](?:[a-zA-Z0-9-]{0,61}[a-zA-Z0-9])?)*$]]></string>
+    <string name="passowrdRegex">^(?=.*\\d).{6,15}$</string>
+    <string name="signup">Signup</string>
+    <string name="sign_in">Sign in</string>
 </resources>
