Sistemata grafica chat, non riesco a modificare la gravity quindi per ora ho modificato il margin left. Manca da sistemare la grafica delle recensione e della request per i closed reports. In fine commentare il codice per Javadoc

--- a/FixITPagliu/app/src/main/res/values/strings.xml
+++ b/FixITPagliu/app/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
     <string name="vote">Vote</string>
     <string name="missing_desc">Missing_desc</string>
     <string name="scrivi_qualcosa">Scrivi qualcosa...</string>
-    <string name="invia">Invia</string>
+    <string name="invia">INVIA</string>
     <string name="date">date</string>
     <string name="inserisci_la_motivazione_per_la_riapertura">Inserisci la motivazione per la riapertura (è possibile effettaure una sola richiesta di riapertura).</string>
     <string name="richiedi_riapertura_segnalazione">Richiedi riapertura segnalazione</string>
